Bug 80708 - RTF: columns table distorted after saving file from older version
Summary: RTF: columns table distorted after saving file from older version
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: All All
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.0.0 target:4.4.4
Keywords: bibisected, bisected, filter:rtf, regression
: 72578 90211 (view as bug list)
Depends on:
Blocks: RTF-Tables 37161
  Show dependency treegraph
 
Reported: 2014-06-30 10:07 UTC by axistandaard
Modified: 2017-10-05 22:08 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Zip file containing both RTF (8.68 KB, application/zip)
2014-06-30 10:07 UTC, axistandaard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description axistandaard 2014-06-30 10:07:17 UTC
Created attachment 102007 [details]
Zip file containing both RTF

Dear Libre Office Team,

We created RTF documents with tables containing a few columns. These files have been created in version 3.4.3.
If we open these RTF and save a copy in version 4.2.5.2 the tables get corrupted somehow. You will see that the width changes and sometimes LO will add an extra column.

I'm not sure if our problem is the same as ticket 77042, 72578 or 62293. Please check.

Attachments:
1. bk64106a.rtf  (original file)
2. bk64106a_test.rtf   (after saving a copy)

Thanks!!
AXI Standaard
Comment 1 axistandaard 2014-06-30 10:08:00 UTC
The same behavior is also in version 4.3.0 RC1
Comment 2 Cor Nouws 2014-07-03 05:43:39 UTC
Hi,

thanks for filing the issue.
I can confirm that in tables 6 (below "E_BKP_DETAIL") and further the first row has an extra column.

Any idea how this was in e.g. 3.5.x or 3.6.x or 4.0.x or 4.1.x :) ?

Cheers,
Cor
Comment 3 axistandaard 2014-07-03 15:07:56 UTC
Hi Cor,

I just checked this with version 4.1.6.2 and the same problem occurs. Too bad I don't have all those olders versions of LO anymore. But I have a feeling this problem has been around for a while.
Just to let you know, this problem does not occurs in MS Office.

Please also consider the problem that the width of the columns changes.

Thank you for your effort,
AXI Standaard
Comment 4 Michael Stahl 2014-07-28 22:07:44 UTC
bibisect range: a330f38093e2643a26239557050561afae9ff23d..f484e0b07820d5772376aa75bc0f823f1e77e2f2

regression from:

commit 1f77a5e8d5bf8a7f1b7bd7206996d2b2efc59462
Author:     Miklos Vajna <vmiklos@frugalware.org>
AuthorDate: Wed Feb 8 16:49:57 2012 +0100

    n#203704 fix RTF export table output for subtables
Comment 5 Björn Michaelsen 2014-10-16 14:59:16 UTC Comment hidden (obsolete)
Comment 6 Commit Notification 2015-04-20 15:42:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5e2708a5a8cad3c2f4578742264610abab677395

tdf#80708 RTF export: fix unexpected table row break

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-04-24 15:54:37 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ffc80d79bf7c209607741cf6211dbe706990fea8&h=libreoffice-4-4

tdf#80708 RTF export: fix unexpected table row break

It will be available in 4.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Alexandr 2015-05-07 19:54:21 UTC
*** Bug 72578 has been marked as a duplicate of this bug. ***
Comment 9 Miklos Vajna 2015-05-23 10:56:25 UTC
*** Bug 90211 has been marked as a duplicate of this bug. ***
Comment 10 Robinson Tryon (qubit) 2015-12-17 05:53:42 UTC Comment hidden (obsolete)